[package]
name = "get-nico-data"
version = "0.1.0"
authors = ["anatawa12 <anatawa12@icloud.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2.0", features = ["full", "time"] }
chrono = { version = "0.4", features = ["serde"] }
parse_duration = { version = "2.1.0" }
crossterm = { version = "0.18" }
url = { version = "2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bytes = { version = "0.5" }
lazy_static = { version = "1.4" }
crossbeam = { version = "0.8" }
indicatif = { version = "0.15" }
clap = { version = "2.33" }
casey = { version = "0.3.3" }
