[package]
name = "html-gen"
version = "0.1.0"
authors = ["anatawa12 <anatawa12@icloud.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10" }
num-format = { version = "0.4" }
indicatif = { version = "0.15" }
structs = { path = "../structs", version="0.1.0" }
bincode = { version = "1.0" }
