[package]
name = "sort-ranking"
version = "0.1.0"
authors = ["anatawa12 <anatawa12@icloud.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.5" }
serde = { version = "1" }
bincode = { version = "1" }
indicatif = { version = "0.15" }
structs = { path = "../structs", version="0.1.0", features = ["bincode"] }
